--- a/styles.css
+++ b/styles.css
@@ -133,6 +133,22 @@ img {
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
 }
 
+.Descrip {
+    display: none;
+}
+
+.modalDescrip {
+    font-family: monospace;
+    font-size: 1.3rem;
+}
+
+.tituloModal {
+    font-family: monospace;
+    font-size: 1.7rem;
+    font-weight: 700;
+    text-align: center;
+}
+
 .item img {
     width: 100%;
     height: 300px;
@@ -161,7 +177,7 @@ img {
     transform: scale(1.02);
 }
 
-tengo el .info-product {
+.info-product {
     padding: 15px 30px;
     line-height: 2;
     display: flex;
