--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+body {
+    /* margin: 0 auto; */
+    margin-top: 0rem;
+    font-family: "Lato";
+    background: url(iconos/FondoVede.webp);
+    background-repeat: no-repeat; /* Evita que se repita */
+    background-size: cover; /* Ajusta el tamaño para cubrir la página */
+    background-position: center; /* Centra la imagen */
+}
+.header{
+    background-color: rgba(255, 255, 255,0.9);
+
+}
+.nav-link {
+    font-weight: bold;
+}
 .redes {
     background-color: transparent;
     display: flex;
@@ -9,25 +25,53 @@
 
 .hero {
     display: flex;
-    background-image: url(Imagenes/TarjetaMobiliario02.jpg);
+    background-image: url(pintura/imgHero.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 40rem;
-    position: relative;
+    height: 70rem;
     margin-bottom: 2rem;
     margin-top: 0rem;
-    scroll-snap-align: center;
-    scroll-snap-stop: always;
-    /* margin: 2rem; */
-    max-width: 100%;
+    /* scroll-snap-align: center;
+    scroll-snap-stop: always; */
+    margin: 0;
+    position: relative;
 }
 
+.contenido-hero {
+    position: absolute;
+    /* background-color: rgba(83, 12, 121, 0.5); */
+    background: linear-gradient(to right,black,transparent);
+    
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background-size: cover;
+    align-items: center;
+    justify-content: center;
+}
+.contenido-hero-inner {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+.logoHero {
+    position: absolute; /* Asegúrate de que la posición esté configurada */
+    top: 15px !important; /* Usa !important para forzar la aplicación */
+    left: 15px !important; /* Usa !important para forzar la aplicación */
+}
 .ubicacion {
     color: white;
     display: flex;
 }
-
+.columna {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 1rem;
+}
 .imgMain {
     display: block;
     /* Hace que la imagen sea un bloque para aplicar márgenes */
@@ -36,29 +80,26 @@
     height: auto;
     /* Mantiene la proporción de la imagen */
     margin: 0 auto;
+    
+    border-radius: 15%;
 }
 
-.contenido-hero {
+.imgHero {
     position: absolute;
-    background-color: rgba(126, 116, 116, 0.5);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+    top: 0;
 }
 
-.contenido-hero h2,
+/* .contenido-hero h2,
 .concontenido-hero p {
-    font-size: 2.6rem;
-}
+    font-size: 5.6rem; 
+} */
 
 .Secciones {
     display: grid;
     align-items: center;
     justify-content: center;
     width: 100%;
+    /* background-color: burlywood; */
 }
 
 .titulo {
@@ -76,15 +117,7 @@
     font-family: monospace;
 }
 
-body {
-    /* margin: 0 auto; */
-    margin-top: 0rem;
-    font-family: "Lato";
-    /* color: #333; */
-    color: #6E6E6D;
-    /* display: flex;
-  justify-content: center; */
-}
+
 
 .icon-cart {
     width: 40px;
@@ -96,9 +129,6 @@ body {
     cursor: pointer;
 }
 
-img {
-    max-width: 100%;
-}
 
 .container-items {
     justify-content: center;
@@ -107,6 +137,7 @@ img {
 }
 
 .item {
+    background-color: rgba(240, 248, 255,0.8);
     border-radius: 10px;
     max-width: 15rem;
     min-height: 32rem;
@@ -118,7 +149,7 @@ img {
 }
 
 .item_sur {
-    background-color: transparent;
+    background-color: rgba(240, 248, 255,0.8);
     grid-column: span 2;
     display: grid;
     align-items: center;
@@ -171,7 +202,7 @@ img {
 }
 
 .item:hover img {
-    transform: scale(1.2);
+    transform: scale(1.1);
 }
 
 .item_sur:hover img {
@@ -229,7 +260,7 @@ img {
     height: 60px;
     bottom: 40px;
     right: 40px;
-    /* background-color: #25d366; */
+    background-color: #25d366;
     color: #fff;
     border-radius: 50px;
     text-align: center;
