--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ body {
 .contenido-hero {
     position: absolute;
     /* background-color: rgba(83, 12, 121, 0.5); */
-    background: linear-gradient(to right,black,transparent);
+    /* background: linear-gradient(to right,black,transparent); */
     
     width: 100%;
     height: 100%;
@@ -69,6 +69,7 @@ body {
     position: absolute; /* Asegúrate de que la posición esté configurada */
     top: 15px !important; /* Usa !important para forzar la aplicación */
     left: 15px !important; /* Usa !important para forzar la aplicación */
+    width: 30%; /* Ajusta el tamaño según sea necesario */
 }
 .ubicacion {
     color: white;
